-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.1

-- A short (one-line) description of the package.
-- Synopsis:            

-- A longer description of the package.
-- Description:         

-- The license under which the package is released.
License:             BSD3

-- The file containing the license text.
License-file:        LICENSE

-- The package author(s).
Author:              Andy Sonnenburg

-- An email address to which users can send suggestions, bug reports,
-- and patches.
Maintainer:          andy.sonnenburg@gmail.com

-- A copyright notice.
-- Copyright:           

Category:            Language

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

cabal-version: >= 1.6
name: code

library
  ghc-options: -Wall -O3
  build-depends: base >= 4
               , binary
               , monads-fd
               , containers
               , bytestring
               , data-binary-ieee754
               , template-haskell
  exposed-modules: Control.Monad.Code
                 , Control.Monad.Code.Class
                 , Control.Monad.ConstantPool
                 , Control.Monad.ConstantPool.Class
                 , Control.Monad.Function
                 , Control.Monad.Indexed
                 , Control.Monad.Indexed.Class
                 , Control.Monad.Indexed.Syntax
                 , Control.Monad.Version
                 , Control.Monad.Version.Class
                 , Data.ClassFile
                 , Data.ClassFile.Access
                 , Data.ClassFile.AttributeInfo
                 , Data.ClassFile.CpInfo
                 , Data.ClassFile.Desc
                 , Data.ClassFile.FieldInfo
                 , Data.ClassFile.MethodInfo
  other-modules: Control.Monad.Code.Opcode

executable hello
  main-is: Hello.hs
  build-depends: base >= 4
  ghc-options: -Wall -O3

executable bf
  main-is: BF.hs
  build-depends: filepath
               , cmdargs
               , array
               , bytestring
  other-modules: Language.Brainfuck.Lexer, Language.Brainfuck.Parser
  build-tools: alex, happy
  ghc-options: -Wall -O3

executable tnt
  main-is: TNT.hs
  build-depends: utf8-string
  other-modules: Language.TNT.Lexer, Language.TNT.Parser
  build-tools: alex, happy
  ghc-options: -Wall -O3
