version: 0.1

-- Synopsis:            

-- Description:         

license: BSD3
license-file: LICENSE
author: Andy Sonnenburg
maintainer: andy.sonnenburg@gmail.com

-- Copyright:           

category: Language
build-type: Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

cabal-version: >= 1.6
name: code

library
  ghc-options: -Wall -O3
  build-depends: base >= 4
               , binary
               , mtl
               , containers
               , bytestring
               , data-binary-ieee754
               , template-haskell
  exposed-modules: Control.Monad.Code
                 , Control.Monad.Code.Class.Typed
                 , Control.Monad.Code.Class.Untyped
                 , Control.Monad.ConstantPool
                 , Control.Monad.ConstantPool.Class
                 , Control.Monad.Function
                 , Control.Monad.Indexed
                 , Control.Monad.Indexed.Class
                 , Control.Monad.Indexed.Syntax
                 , Control.Monad.Version
                 , Control.Monad.Version.Class
                 , Data.ClassFile
                 , Data.ClassFile.Access
                 , Data.ClassFile.AttributeInfo
                 , Data.ClassFile.CpInfo
                 , Data.ClassFile.Desc
                 , Data.ClassFile.FieldInfo
                 , Data.ClassFile.MethodInfo
  other-modules: Control.Monad.Code.Opcode

executable hello
  main-is: Hello.hs
  ghc-options: -Wall -O3

executable bf
  main-is: BF.hs
  build-depends: filepath
               , cmdargs
               , array
               , bytestring
  other-modules: Language.Brainfuck.Lexer, Language.Brainfuck.Parser
  build-tools: alex, happy
  ghc-options: -Wall -O3

executable tnt
  main-is: TNT.hs
  build-depends: utf8-string
               , semigroups
               , semigroupoids
               , comonad
  other-modules: Language.TNT.Lexer, Language.TNT.Parser
  build-tools: alex, happy
  ghc-options: -Wall -O3
